# archtecture_experiment

experiment/: docker-compose.yml
experiment/access_module/: Dockerfile  app.py  pyproject.toml
experiment/app_receiver/: Dockerfile  app.py  pyproject.toml
experiment/data/: failed_requests.jsonl  requests.jsonl
experiment/tourniquet/: Dockerfile  app.py  pyproject.toml
experiment/worker_processor/: Dockerfile  pyproject.toml  worker.py
