[tool.poetry]
name = "access-module"
version = "0.1.0"
description = ""
authors = ["Walter <walter.stick@mercadolibre.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.5"
numpy = "^2.1.3"
uvicorn = "^0.32.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
