[tool.poetry]
name = "worker-processor"
version = "0.1.0"
description = ""
authors = ["Walter <walter.stick@mercadolibre.com.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
redis = "^5.2.0"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
